a critical lambda type bug solved